[package]
name = "aftventure"
version = "0.1.0"
authors = ["aftix <aftix@aftix.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion="1.5"
noise={version = "0.6", default-features=false}
chrono="0.4"
glium="0.29"
cgmath="0.18"
